@@ -1,3 +1,10 @@
+2012-09-03  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-notifications.el (gnus-notifications-notify): Use it.
+
+	* gnus-fun.el (gnus-funcall-no-warning): New function to silence
+	warnings on XEmacs.
+
 2012-09-01  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Better seeds for (random).
